# watchedog-app

./: .gitignore  README.md  config.json  main.py  nuitka-crash-report.xml  pyproject.toml  フォルダ監視くん.spec  フォルダ監視くん_dbg.spec
.venv-build/: pyvenv.cfg
.venv-build/Scripts/: activate  activate.bat
src/: config.json  gui.py  watcher.py
src/watchedog_app/: __init__.py
src/watchedog_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tools/: convert_icon.py
uv-example-app/: main.py  pyproject.toml
