[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "watchedog-app"
version = "1.1.0"
description = "フォルダ監視アプリ"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [ { name = "Shoji Hirano", email = "hirano.shoji@jp.panasonic.com" } ]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"License :: Other/Proprietary License",
]
keywords = ["internal", "watch", "monitor"]

dependencies = [
	"nuitka>=4.1.2",
	"pillow>=9.0.0",
	"pystray>=0.19.0",
	"ruff>=0.15.15",
	"win11toast>=0.36.3",
]

[project.optional-dependencies]
dev = [
	"black>=23.0",
	"flake8",
	"isort",
	"mypy",
	"pytest",
	"ruff>=0.15.14",
]

build = [
	"pyinstaller>=6.0",
]

docs = ["sphinx", "sphinx-rtd-theme"]

[project.scripts]
watchedog = "watchedog_app.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["watchedog_app*"]

[tool.black]
line-length = 80
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.12
strict = true
files = ["src"]

# Local, internal defaults for CI and developers
[tool.coverage.run]
branch = true
source = ["watchedog_app"]

[tool.lint.ruff]
line-length = 88
select = [
	"E", 
	"F", 
	"W", 
	"I", 
	"D", 
	"UP", 
	"N", 
	"C90", 
	"PL", 
	"PGH", 
	"TID", 
	"ERA",
	"Q", 
	"S", 
	"T", 
	"ANN", 
	"COM", 
	"RUF", 
	"UP"
]
ignore = ["E501"]
